--- a/css/styles.css
+++ b/css/styles.css
@@ -26,6 +26,10 @@ li a {
     color: hsl(233, 8%, 62%);
 }
 
+.a {
+    width: 100%;
+}
+
 li a:hover {
     text-decoration: none;
     color: black;
@@ -252,6 +256,7 @@ h3 {
 
 #blog {
     text-align: left;
+    margin: 100px 0;
 }
 
 #blog h1 {
@@ -273,7 +278,7 @@ h3 {
     font-weight: bold;
 }
 
-.col-lg-6 {
+.col-lg-3 {
     margin: 0 auto;
 }
 
